<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="my.myusri.magneto.HomeActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/plan_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="56dp">

        <!--
         See below on the need for nested PercentFrameLayout:
         http://stackoverflow.com/questions/40216361/android-percent-layouts
        -->
        <android.support.percent.PercentFrameLayout
            android:layout_marginTop="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.percent.PercentFrameLayout
                app:layout_widthPercent="90%"
                app:layout_aspectRatio="70%"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/outside1"
                    android:contentDescription="@string/outside1"
                    app:layout_marginTopPercent="2%"
                    app:layout_widthPercent="90%"
                    app:layout_aspectRatio="300%"
                    android:layout_gravity="center_horizontal"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/illum"/>

                <ImageView
                    android:id="@+id/outside2"
                    android:contentDescription="@string/outside2"
                    app:layout_marginTopPercent="78%"
                    app:layout_widthPercent="90%"
                    app:layout_aspectRatio="300%"
                    android:layout_gravity="center_horizontal"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/illum"/>

                <ImageView
                    android:id="@+id/home"
                    app:layout_marginTopPercent="5%"
                    app:layout_marginBottomPercent="5%"
                    app:layout_widthPercent="100%"
                    app:layout_aspectRatio="80%"
                    android:background="#00ffffff"
                    android:contentDescription="@string/house_plan"
                    android:visibility="visible"
                    app:srcCompat="@drawable/studio"/>

                <ImageView
                    android:id="@+id/living1"
                    android:contentDescription="@string/living1"
                    app:layout_marginTopPercent="22%"
                    app:layout_marginLeftPercent="12%"
                    app:layout_widthPercent="30%"
                    app:layout_aspectRatio="100%"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/illum"/>

                <ImageView
                    android:id="@+id/living2"
                    android:contentDescription="@string/living2"
                    app:layout_marginTopPercent="22%"
                    app:layout_marginLeftPercent="50%"
                    app:layout_widthPercent="30%"
                    app:layout_aspectRatio="100%"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/illum"/>

                <ImageView
                    android:id="@+id/kitchen1"
                    android:contentDescription="@string/kitchen1"
                    app:layout_marginTopPercent="47%"
                    app:layout_marginLeftPercent="50%"
                    app:layout_widthPercent="30%"
                    app:layout_aspectRatio="100%"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/illum"/>

                <ImageView
                    android:id="@+id/kitchen2"
                    android:contentDescription="@string/kitchen2"
                    app:layout_marginTopPercent="65%"
                    app:layout_marginLeftPercent="50%"
                    app:layout_widthPercent="30%"
                    app:layout_aspectRatio="100%"
                    android:visibility="invisible"
                    app:srcCompat="@drawable/illum"/>

            </android.support.percent.PercentFrameLayout>
        </android.support.percent.PercentFrameLayout>
    </ScrollView>
    <ImageView
        android:id="@+id/conn_stat"
        android:contentDescription="@string/conn_stat"
        android:layout_marginTop="70dp"
        app:layout_marginLeftPercent="5%"
        app:layout_widthPercent="6%"
        app:layout_aspectRatio="100%"
        app:srcCompat="@drawable/stat"/>

</android.support.percent.PercentFrameLayout>
